include/bp/Logger.h

BP_BEGIN_CDECLS

typedef struct BpLogger BpLogger;
/**
 * @brief Enumeration representing different log levels.
 */
typedef enum BpLogLevel {
    BP_LOG_TRACE = 0,    /**< Lowest log level for tracing detailed operations. */
    BP_LOG_DEBUG = 1,    /**< Log level for debugging information. */
    BP_LOG_INFO = 2,     /**< Log level for informational messages. */
    BP_LOG_WARN = 3,     /**< Log level for warning messages. */
    BP_LOG_ERROR = 4,    /**< Log level for error messages. */
    BP_LOG_FATAL = 5,    /**< Log level for critical/fatal errors. */
    BP_LOG_OFF = 6       /**< Highest log level, turns off logging completely. */
} BpLogLevel;
/**
 * @brief Get the logger by name.
 * @param name The name of the logger.
 * @return The logger if found, otherwise create a new one.
 */
BP_EXPORT BpLogger *bpGetLogger(const char *name);
/**
 * @brief Get the default logger.
 * @return The default logger.
 */
BP_EXPORT BpLogger *bpGetDefaultLogger();
/**
 * @brief Set the default logger.
 * @param logger The logger to set as default.
 * @return The previous default logger.
 */
BP_EXPORT void bpSetDefaultLogger(BpLogger *logger);
/**
 * @brief Increase the reference count of the logger.
 * @param logger The logger.
 * @return The new reference count.
 */
BP_EXPORT int bpLoggerAddRef(BpLogger *logger);
/**
 * @brief Decrease the reference count of the logger.
 * @param logger The logger.
 * @return The new reference count.
 */
BP_EXPORT int bpLoggerRelease(BpLogger *logger);
/**
 * @brief Get the name of the logger.
 * @param logger The logger.
 * @return The name of the logger.
 */
BP_EXPORT const char *bpLoggerGetName(BpLogger *logger);
/**
 * @brief Get the log level of the logger.
 * @param logger The logger.
 * @return The log level of the logger.
 */
BP_EXPORT BpLogLevel bpLoggerGetLevel(BpLogger *logger);
/**
 * @brief Get the string representation of a log level.
 * @param logger The logger.
 * @param level The log level to get the string representation of.
 * @return The string representation of the log level.
 */
BP_EXPORT const char *bpLoggerGetLevelString(BpLogger *logger, BpLogLevel level);
/**
 * @brief Set the log level of the logger.
 * @param logger The logger.
 * @param level The log level to set.
 */
BP_EXPORT void bpLoggerSetLevel(BpLogger *logger, BpLogLevel level);
/**
 * @brief Log a message with the specified log level.
 * @param logger The logger.
 * @param level The log level of the message.
 * @param format The format string of the message.
 * @param ... The variable arguments list for the format string.
 */
BP_EXPORT void bpLoggerLog(BpLogger *logger, BpLogLevel level, const char *format, ...);
/**
 * @brief Log a trace message with the specified format and arguments.
 * @param logger The logger.
 * @param format The format string of the message.
 * @param ... The variable arguments list for the format string.
 */
static inline void bpLoggerTrace(BpLogger *logger, const char *format, ...) {
    va_list args;
    va_start(args, format);
    bpLoggerLogV(logger, BP_LOG_TRACE, format, args);
    va_end(args);
}